apps/lambda/gloo/virtual-service-waf.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: greeter
  namespace: gloo-system
spec:
  displayName: AWS Lambda Greeter
  virtualHost:
    domains:
      - "example.com"
    options:
      # -------- Web Application Firewall - Check User-Agent  -----------
      waf:
        ruleSets:
          - ruleStr: |
              SecRuleEngine On
              SecRequestBodyLimit 50
              SecRequestBodyLimitAction Reject
        customInterventionMessage: "Payload sizes above 50 bytes not allowed"
    routes:
      # Application Routes
      # ------------
      - matchers:
          - exact: /greet
        routeAction:
          single:
            destinationSpec:
              aws:
                logicalName: gloo-edge-hello-lambda
            upstream:
              name: gloo-edge-hello-lambda
              namespace: gloo-system
        options:
          # ---------------- Rate limit config ----------------------
          rateLimitConfigs:
            refs:
              - name: lambda-global-limit
                namespace: gloo-system
